static/styles/homepage.css
:root{
	--background: #FEFBE7;
	--primary-color: #99a8bb;
	--secondary-color: #4e6190;
	--accent-color: #124C81;
	--text-color: #F9F9F9;
}

*{
	margin: 0;
	padding: 0;
}

html{
  font-family: Scheherazade New, lexend, sans-serif;
  font-size: 16pt;
  color: var(--text-color);
 }

body{
    min-height: 100vh;
    padding: 10px;
    background-color: var(--background);
    background-repeat: no-repeat;
    background-position: top left;
    background-size: 300px auto;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.navbar{
	background-color: var(--text-color);
	padding-left: 30px;
	padding-right: 30px;
	width: 100%;
	margin-top: -10px;
	margin-bottom: 30px;
	border-radius: 5px;
	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
}
.navdiv{
	display: flex;
	align-items: center;
	justify-content:space-between;
}
.navbarlist{
	list-style: none;
	display: contents;
}

.logo img{
	height: 50px;
	width: auto;
}
h1{
    margin-top: 50px;
    margin-bottom: 20px;
    font-size: 2.5rem;
    font-weight: 800;
    text-align: center;
    color: var(--accent-color);
}
#welcome{
	font-size: 0.8rem;
	padding: 5px;
	margin-left: -100px;
	color: var(--primary-color);
}
.wrapper{
    width: 600px;
    max-width: 100%;
    display: flex;
    flex-direction: column;
    gap: 10px;
    background-color: #fff;
    padding: 20px;
    border-radius: 5px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
}

#todo-input{
    box-sizing: border-box;
    padding: 12px 20px;
    width: 88%;
    background-color: var(--text-color);
    border: 2px solid var(--secondary-color);
    border-radius: 1000px;
    font: inherit;
    caret-color: var(--text-color);
    color: var(--accent-color);
}

#todo-input:focus{
    outline: none;
}

#todo-description{
	width: 27%;
}

#todo-priority{
	width: 26%;
}

#todo-deadline{
	width: 26%;
}

#todo-form {
    background-color: var(--primary-color);
    border-radius: 10px;
    padding: 5px;
    display: flex;
    flex-direction: column;
    gap: 10px;
}

#todo-form input,

#todo-form input[type="date"] {
    /* Customize date input appearance as needed */
    padding: 8px;
    font-family: Scheherazade New, lexend, sans-serif;
    border: 1px solid var(--secondary-color);
    border-radius: 8px;
    font-size: 0.8rem;
    caret-color: var(--text-color);
    color: var(--accent-color);
}

#todo-form button {
    padding: 12px 20px;
    background-color: var(--accent-color);
    color: var(--text-color);
    border: none;
    border-radius: 8px;
    font-size: 1rem;
    cursor: pointer;
}

#todo-form button:hover {
    background-color: #0d355f; /* Darker shade of accent color on hover */
}

form{
    position: relative;
}

#add-button{
    position: absolute;
    top: 0;
    right: 0;

    background-color: var(--accent-color);
    height: 100%;
    width: 12%;
    padding: 12px 12px;
    border: 2px solid var(--secondary-color);
    border-radius: 1000px;
    font: inherit;
    font-weight: 600;
    color: var(--background);
    cursor: pointer;
}

#logout-button{
    background-color: var(--accent-color);
    padding: 7px 7px;
    border: 2px solid var(--secondary-color);
    border-radius: 10px;
    font: inherit;
    font-weight: 400;
    color: var(--text-color);
    cursor: pointer;
}

.todo{
    margin-bottom: 10px;
    padding: 0 16px;
    background-color: var(--primary-color);
    border-radius: 15px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.todo .todo-text{
    padding: 10px;
    padding-right: 0;
    flex-grow: 1;
    transition: 200ms ease;
}

.task-header {
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: stretch;
	width: -webkit-fill-available;
	font-size: 1rem;
}

.task-details {
    display: flex;
    flex-direction: row;
    width: -webkit-fill-available;
    justify-content: flex-start;
}

.task-description, .task-deadline {
    margin-bottom: 10px;
    width: 50%;
    padding: 0;
    font-size: 0.8em;
    color: var(--accent-color);
}

.task-priority {
    width: 20px;
    height: 20px;
    border-radius: 50%;
    display: inline-block;
    margin-right: 5px;
    vertical-align: middle;
}

.task-priority.high {
    background-color: red;
}

.task-priority.mid {
    background-color: orange;
}

.task-priority.low {
    background-color: green;
}

.delete-button{
    padding: 3px;
    background: none;
    border: none;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
}

.delete-button svg{
    transition: 200ms ease;
}

.delete-button:hover svg{
    fill: #d6542c;
}

.custom-checkbox{
    border: 2px solid var(--accent-color);
    border-radius: 50%;
    min-height: 20px;
    min-width: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-shrink: 0;
    transition: 200ms ease;
    cursor: pointer;
}

input[type="checkbox"]:checked ~ .custom-checkbox{
    background-color: var(--accent-color);
}

input[type="checkbox"]:checked ~ .custom-checkbox svg{
    fill: var(--primary-color);
}

input[type="checkbox"]:checked ~ .todo-text{
    text-decoration: line-through;
    color: var(--secondary-color);
}

input[type="checkbox"]{
    display: none;
}

@media(max-width: 500px){
    html{
        font-size: 12pt;
    }
    #add-button{
        position: unset;
        width: 100%;
        margin-top: 10px;
        padding: 15px;
        height: auto;
    }
    h1{
        margin-top: 50px;
        font-size: 15vw;
    }
}

